webgui/css/flex_table.css
html, body {
    margin: 0;
    padding: 0;
    height:100%;
}

.flex {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

header, article, footer {
    min-height:1em;
}

header {
    flex: 0 0 auto;
    display: flex;
    flex-direction: row;
    color: white; 
    font-weight: bold;
}
article { 
    flex: 1 1 auto;
    overflow-x: hidden; /* scroll to debug */
    overflow-y: auto;
}

footer {
    flex: 0 0 auto;
    display: flex;
    flex-direction: row;
    color: white;
}

.log_row:hover {
  background-color: #f5f5f5;
  color: black;
}

.log_row {
    display: flex;
    flex-direction: row;
}

header > div {
    padding: 0.5em;
}

header > div, article > div, footer > div {
    padding: 0.1em;
}

/* client_console log columns settings */
header > :not(:last-child), .log_row > :not(:last-child), footer > :not(:last-child) {
    flex: 0 0 auto;
    width: 8em;
    text-align: center;
}

header > :last-child, .log_row > :last-child, footer > :last-child {
    flex: 1 1 auto;
    /* width:50%; */
    padding-left: 1em;
}

.clients_grid {
    flex: 0 1 auto;
    display: grid;
    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto;
    grid-gap: 0px;
    max-height: 100%;
    overflow: auto;
    padding: 0em 0.5em;
}

.clients_grid > div {
    color: white;
    padding: 0.2em 0.5em;
    font-size: medium;
    border-bottom: 1px solid rgba(255,255,255,0.2);
    border-left: 1px solid rgba(255,255,255,0.2);

/* SCSS version of next styles */
/*
    & > div:nth-child(13n+1) {
        border-left: none;
    }
    & > div:nth-child(13n+4),
    & > div:nth-child(13n+7) {
        text-align: center;
    }
    & > div:nth-child(13n+10),
    & > div:nth-child(13n+11) {
        text-align: right;
    }
*/
}

.clients_grid > div:nth-child(13n+1) {
    border-left: none;
}

.clients_grid > div:nth-child(13n+4),
.clients_grid > div:nth-child(13n+7) {
    text-align: center;
}

.clients_grid > div:nth-child(13n+10),
.clients_grid > div:nth-child(13n+11) {
    text-align: right;
}


.head, .foot {
    position:sticky;
    top:0;
    font-weight: bold;
}
.foot {
    top:auto;
    bottom:0;
}

